refactored json